# tap

./: LICENSE  README.md  pyproject.toml  pytest.ini
src/: higher_order_tap_proxy.py  tap.py
tests/: higher_order_tap_proxy_test.py  tap_test.py
tests/artifacts/: sample_object.py
